# TokenDrift

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
examples/: 01_basic_usage.py  02_cost_impact.py  03_boundary_analysis.py  04_ci_gate.py  05_cost_governance.py
src/tokendrift/: __init__.py  __main__.py  models.py
src/tokendrift/cli/: main.py
src/tokendrift/core/: alert.py  baseline.py  boundary.py  compression.py  estimate.py  forecast.py  loader.py  migrate.py  registry.py
src/tokendrift/report/: terminal.py
tests/: conftest.py  test_alert.py  test_baseline.py  test_boundary.py  test_cli.py  test_cli_v11.py  test_compression.py  test_cost.py  test_differ.py  test_estimate.py  test_forecast.py  test_loader.py  test_loaders.py  test_migrate.py  test_registry.py  test_terminal.py  test_vocab.py
tests/fixtures/: corpus.jsonl
tokendrift/: __init__.py  models.py
tokendrift/cli/: main.py
tokendrift/core/: differ.py  vocab.py
tokendrift/corpus/: loaders.py
tokendrift/report/: cost.py  terminal.py
tokenlens/: __init__.py  models.py
tokenlens/cli/: main.py
tokenlens/core/: boundary.py  differ.py  loader.py  vocab.py
tokenlens/corpus/: loaders.py
tokenlens/report/: cost.py  terminal.py
