[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenlens"
version = "0.1.0"
description = "Token-count, cost, and vocabulary diffing for LLM tokenizer changes"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Armaan Sandhu", email = "asandhu05@wpi.edu" }]
keywords = ["llm", "tokenizer", "diff", "regression", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = [
    "tiktoken>=0.7.0",
    "tokenizers>=0.19.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.8.5",
    "pyright>=1.1.400",
]
nltk = ["nltk>=3.8"]
sentencepiece = ["sentencepiece>=0.2.0"]

[project.scripts]
tokenlens = "tokenlens.cli.main:app"

[project.urls]
Homepage = "https://github.com/Ar-maan05/tokenlens"
Repository = "https://github.com/Ar-maan05/tokenlens"
Issues = "https://github.com/Ar-maan05/tokenlens/issues"
Changelog = "https://github.com/Ar-maan05/tokenlens/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["tokenlens*"]

[tool.setuptools.package-data]
tokenlens = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["tokenlens"]
omit = ["tests/*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
include = ["tokenlens"]
pythonVersion = "3.10"
